2003-11-11  Dave Neary  <bolsh@gimp.org>
        * app/widgets/gimpdataeditor.c: Save data before disposing of
        it when closing the dialog. Closes bug #116606.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11384 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-11  Dave Neary  <bolsh@gimp.org>
+
+	* app/widgets/gimpdataeditor.c: Save data before disposing of 
+	it when closing the dialog. Closes bug #116606.
+
 2003-11-11  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpdialog.[ch] (gimp_dialog_run): new function
