2003-11-11  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-scripts.c: set color buttons to
	continuous update. Minor code cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11385 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-11  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-scripts.c: set color buttons to
+	continuous update. Minor code cleanup.
+
 2003-11-11  Dave Neary  <bolsh@gimp.org>
 
 	* app/widgets/gimpdataeditor.c: Save data before disposing of 
