2003-11-11  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcolornotebook.c
	* libgimpwidgets/gimpcolorselection.c
	* libgimpwidgets/gimpdialog.c: minor cleanup, API docs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11386 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-11  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpcolornotebook.c
+	* libgimpwidgets/gimpcolorselection.c
+	* libgimpwidgets/gimpdialog.c: minor cleanup, API docs.
+
 2003-11-11  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-scripts.c: set color buttons to
@@ -43,7 +49,7 @@
 	can show the color selectors which are implemented in modules:
 
 	* libgimpwidgets/gimpwidgets-private.[ch]: added
-	GimpEnsureModlesFunc which can be called by modules users.
+	GimpEnsureModulesFunc which can be called by modules users.
 
 	* app/gui/gui.c (gui_libs_init): pass NULL as
 	GimpEnsureModulesFunc since the core loads the modules itself.
