Moved code from gfig.c to 2 new files.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11387 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-11-11  Maurits Rijk  <lpeek.mrijk@consunet.nl
+
+	* plug-ins/gfig/gfig-preview.[ch]
+	* plug-ins/gfig/gfig-grid.[ch]: new files.
+	
+	* plug-ins/gfig/Makefile.am: changed accordingly.
+	* po-plug-ins/POTFILES.in: added new files for translation.
+
+	* plug-ins/gfig/gfig.[ch]: moved preview and grid code to their own
+	file.
+	
+
 2003-11-11  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolornotebook.c
