Moved Maurits ChangeLog entry here.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11389 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-11  Maurits Rijk  <lpeek.mrijk@consunet.nl>
+
+	* POTFILES.in: added new files for translation.
+
 2003-11-11  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added new DICOM plug-in.
