2003-11-12  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcoloreditor.c: implement GtkWidget::style_set()
	and update the button box spacing and icons sizes accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11393 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-12  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcoloreditor.c: implement GtkWidget::style_set()
+	and update the button box spacing and icons sizes accordingly.
+
+2003-11-12  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/themes.[ch]: split out function themes_apply_theme()
 	from themes_init(). Connect to "notify::theme" of gimp->config and
 	change the theme in the callback. Added themes_list_themes().
