2003-11-12  Sven Neumann  <sven@gimp.org>
	* app/gui/color-notebook.c (color_notebook_new): added a default
	role used for color selectors not handled by GimpDialogFactory.
	Fixes bug #126783.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11395 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-12  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/color-notebook.c (color_notebook_new): added a default
+	role used for color selectors not handled by the GimpDialogFactory.
+	Fixes bug #126783.
+
 2003-11-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpeditor.[ch] (gimp_editor_set_box_style): new
