--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+2003-11-12  Michael Natterer  <mitch@gimp.org>
+
+	Use the correct GTK+ APIs for setting and changing the theme:
+
+	* app/gui/themes.c (themes_apply_theme): don't call gtk_rc_parse()
+	but write a new config file "~/.gimp-1.3/themerc" which includes
+	both the theme's and the user's gtkrc files.
+
+	(themes_init): use gtk_rc_add_default_file() to make themerc known
+	to GTK+.
+
+	(themes_theme_change_notify): don't fiddle with toplevel windows
+	manually but simply call gtk_rc_reparse_all() after writing the
+	new themerc.
+
+	* libgimp/gimpui.c (gimp_ui_init): use gtk_rc_add_default_file()
+	instead of gtk_rc_parse().
+
+	* app/gui/preferences-dialog.c: cleaned up / beautified the theme
+	selector. Added a "Reload Current Theme" button. Simplified
+	GtkTreeView column inserting all over the place.
+
+	(prefs_response): destroy the preferences dialog later so we don't
+	crash when cancelling a theme change on "Cancel" (workaround for
+	bug #126808).
+
+	* app/gui/module-browser.c (module_browser_new): column inserting
+	simplification.
+
 2003-11-12  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/color-notebook.c (color_notebook_new): added a default
