2003-11-12  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpquerybox.c (create_query_box): set proper
	alignments for the GtkImage and GtkLabel of the query_box.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11400 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-12  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpquerybox.c (create_query_box): set proper
+	alignments for the GtkImage and GtkLabel of the query_box.
+
 2003-11-12  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimppropwidgets.c: set the boundaries for the
