2003-11-12  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpmemsizeentry.c: fixed a problem with the
	value being clamped to wrong boundaries when setting the value
	prorammatically.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11401 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-12  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpmemsizeentry.c: fixed a problem with the
+	value being clamped to wrong boundaries when setting the value
+	prorammatically.
+
 2003-11-12  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpquerybox.c (create_query_box): set proper
