2003-11-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
	* es.po: Updated Spanish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11402 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation.
+
 2003-11-11  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
