2003-11-13  Sven Neumann  <sven@gimp.org>
	* app/app-sections.txt: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11405 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-13  Sven Neumann  <sven@gimp.org>
+
+	* app/app-sections.txt: updated.
+
 2003-11-11  Sven Neumann  <sven@gimp.org>
 
 	* app/Makefile.am (IGNORE_HFILES): removed
