--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-13 Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpdrawable-stroke.c: removed erraneous offset by
+	0.5 pixels.
+
+	* app/core/gimpstrokeoptions.c: Adjusted default width of libart
+	strokes so that a rectangular selection gets stroked with sharp
+	edges.
+
 2003-11-12  Henrik Brix Andersen  <brix@gimp.org>
 
 	* gimp/app/widgets/gimphelp.c
