--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-13  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/stroke-dialog.c: remember the stroke settings in a less
+	hackish way.
+
 2003-11-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-undo-push.c (undo_pop_layer): when trying to
