--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,22 @@
 2003-11-13  Sven Neumann  <sven@gimp.org>
 
+	* app/app_procs.[ch]
+	* app/main.c
+	* app/core/gimp.[ch]
+	* app/gui/gui.c
+	* app/gui/session.[ch]: allow to pass a session name on the
+	command-line. This causes a different sessionrc to be used. This
+	is a bit hackish but our power users will probably love it.
+	Also removed the useless --restore-session command-line option.
+
+	* docs/gimp-1.3.1.in: changed accordingly.
+
+	* app/core/gimpmarshal.list: removed obsolete marshaller.
+
+	* app/config/gimprc.c (gimp_rc_new): improved gtk-doc comment.
+
+2003-11-13  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/stroke-dialog.c: remember the stroke settings in a less
 	hackish way.
 
