2003-11-13  Sven Neumann  <sven@gimp.org>
	* app/gui/color-history.[ch]
	* app/gui/gui.c
	* app/gui/session.c: moved the color history out of the sessionrc
	into it's own little file called colorrc.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11411 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-13  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/color-history.[ch]
+	* app/gui/gui.c
+	* app/gui/session.c: moved the color history out of the sessionrc
+	into it's own little file called colorrc.
+
 2003-11-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimppreviewrenderer.[ch]: multihead fix: added
