2003-11-13  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpsessioninfo.c (gimp_session_info_deserialize):
	restore compatibility with older sessionrc format. No need to
	break everyone's sessionrc again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11414 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-13  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpsessioninfo.c (gimp_session_info_deserialize): 
+	restore compatibility with older sessionrc format. No need to
+	break everyone's sessionrc again.
+
+2003-11-13  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimpconfig-deserialize.c
 	(gimp_config_deserialize_unknown)
 	(gimp_config_deserialize_property): unset the scanner scope to
