2003-11-13  Michael Natterer  <mitch@gimp.org>
	* autogen.sh: removed "--copy" from the call to libtoolize.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11418 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-13  Michael Natterer  <mitch@gimp.org>
+
+	* autogen.sh: removed "--copy" from the call to libtoolize.
+
 2003-11-13  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpsessioninfo.c: only save the screen number to
