--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-14 Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpvectoroptions.c: Add two buttons to the
+	Tool Options
+
+	* app/tools/gimpvectortool.c: Use them for stroking a path
+	and converting a path to a selection, to make this functionality
+	more obvious.
+
 2003-11-13  Michael Natterer  <mitch@gimp.org>
 
 	* autogen.sh: removed "--copy" from the call to libtoolize.
