2003-11-14  Sven Neumann  <sven@gimp.org>
	* libgimpbase/gimputils.[ch] (gimp_memsize_to_string): take a
	guint64 parameter and handle values beyond a gigabyte.

	* app/core/gimptemplate.[ch]: use a guint64 for the initial memory
	size and removed the gboolean that used to indicate a gulong
	overflow.

	* app/widgets/gimptemplateeditor.[ch]: changed accordingly.

	* app/gui/file-new-dialog.c: don't set the OK button insensitive
	when the initial memory size exceeds GULONG_MAX.

	* app/widgets/gimpsessioninfo.c (gimp_session_info_deserialize):
	replaced a misleading comment.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11420 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2003-11-14  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/gimputils.[ch] (gimp_memsize_to_string): take a
+	guint64 parameter and handle values beyond a gigabyte.
+
+	* app/core/gimptemplate.[ch]: use a guint64 for the initial memory
+	size and removed the gboolean that used to indicate a gulong
+	overflow.
+
+	* app/widgets/gimptemplateeditor.[ch]: changed accordingly.
+
+	* app/gui/file-new-dialog.c: don't set the OK button insensitive
+	when the initial memory size exceeds GULONG_MAX.
+
+	* app/widgets/gimpsessioninfo.c (gimp_session_info_deserialize):
+	replaced a misleading comment.
+
 2003-11-14 Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpvectoroptions.c: Add two buttons to the
