2003-11-14  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdevices.c: code review & cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11422 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdevices.c: code review & cleanup.
+
 2003-11-14  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpmemsizeentry.[ch]: changed to use guint64
