2003-11-14  Sven Neumann  <sven@gimp.org>
	* app/config/gimprc-blurbs.h (CAN_CHANGE_ACCELS_BLURB): applied
	(a slightly modified version) of a patch from Joao S. O. Bueno
	(bug #126966).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11424 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-14  Sven Neumann  <sven@gimp.org>
 
+	* app/config/gimprc-blurbs.h (CAN_CHANGE_ACCELS_BLURB): applied
+	(a slightly modified version) of a patch from Joao S. O. Bueno
+	(bug #126966).
+
+2003-11-14  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimpscanner.c	
 	* app/config/gimpconfig-deserialize.c: configured the scanner to
 	use 64bit integers. This means you must now access value.v_int64
