--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-14  Michael Natterer  <mitch@gimp.org>
+
+	* de.po: updated German translation after app/ message cleanup.
+
 2003-11-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation.
