--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpbrush.c (gimp_brush_load_brush): fixed order of
+	parameters after message change.
+
 2003-11-14  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/info-dialog.c (info_dialog_popup): use gtk_window_present().
