2003-11-14  Michael Natterer  <mitch@gimp.org>
	* app/config/gimpconfig-utils.c
	* app/gui/themes.c: use standard file error message
	strings. Removes two more translatable strings.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11429 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-14  Michael Natterer  <mitch@gimp.org>
 
+	* app/config/gimpconfig-utils.c
+	* app/gui/themes.c: use standard file error message
+	strings. Removes two more translatable strings.
+
+2003-11-14  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpbrush.c (gimp_brush_load_brush): fixed order of
 	parameters after message change.
 
