2003-11-14  Michael Natterer  <mitch@gimp.org>
	* de.po: even more different file error messages were removed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11430 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-14  Michael Natterer  <mitch@gimp.org>
 
+	* de.po: even more different file error messages were removed.
+
+2003-11-14  Michael Natterer  <mitch@gimp.org>
+
 	* de.po: updated German translation after app/ message cleanup.
 
 2003-11-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
